# EmLoco

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
EqMotion/: README.md  main_eth_diverse.py  pred.json  test_eth.sh  train_eth.sh
PHC/: README.MD
PHC/phc/: run_hydra.py
PHC/phc/learning/: common_player.py  im_amp_players.py
PHC/phc/utils/: config.py
PHC/sample_data/: see_sample_pkl.py
isaacgym/python/examples/: graphics.py  interop_torch.py  joint_monkey.py
isaacgym/python/isaacgym/: gymapi.py  gymtorch.py
pacer/: README.md  commit.sh  eval_policy.sh  eval_policy_nopose.sh  eval_policy_novel.sh  eval_policy_trajonly.sh  vulkaninfo.html
pacer/pacer/: run.py
pacer/pacer/learning/: amp_continuous.py  amp_continuous_value.py  amp_network_builder.py  amp_network_sept_builder.py  amp_players.py  (+8 more)
plausibl/: __init__.py  test_value_mlp.py
social-transmotion/: README.md  dataset_jrdb.py  dataset_jta.py  draw_histogram.py  eval.sh  evaluate_cross_dataset.py  evaluate_jrdb.py  evaluate_jta.py  filter.sh  gridbased_pooling.py  hyper_tuning_jrdb.py  hyper_tuning_jta.py  hyper_tuning_monitor.py  load_jrdb_3dpose.py  load_jrdb_traj.py  load_jta_3dpose.py  load_jta_traj.py  model_jrdb.py  model_jta.py  social_lstm.py  train_jrdb.py  train_jta.py  train_social-lstm_jta.py  tto_tune_jta.py  visualize_pred.py
social-transmotion/configs/: jrdb_2dbox.yaml  jrdb_all_visual_cues.yaml  jrdb_all_visual_cues_lstm.yaml  jta_all_visual_cues.yaml  jta_all_visual_cues_lstm.yaml  jta_social-lstm.yaml
social-transmotion/utils/: data.py  metrics.py  utils.py
(+23 files in other folders)
